--- a/src/components/billboard/Billboard.module.scss
+++ b/src/components/billboard/Billboard.module.scss
@@ -9,6 +9,8 @@
     justify-content: center;
     align-items: center;
     z-index: 2;
+    margin-bottom: 100px;
+    
     .bg {
         width: 100%;
         height: 362px;
