--- a/src/components/billboard/Billboard.module.scss
+++ b/src/components/billboard/Billboard.module.scss
@@ -1,3 +1,13 @@
+.test {
+    &__img {
+        width: 100%;
+        height: 362px;
+        object-fit: cover;
+    }
+   
+}
+
+
 .billboard {
     width: 100%;
     height: 362px;
@@ -10,13 +20,13 @@
     align-items: center;
     z-index: 2;
     margin-bottom: 100px;
-    
+
     .bg {
         width: 100%;
         height: 362px;
         position: absolute;
         background-color: #000;
-        opacity: 0.6;
+        opacity: 0.7;
         z-index: 3;
     }
 
