--- a/src/components/recipe/Recipe.module.scss
+++ b/src/components/recipe/Recipe.module.scss
@@ -1,11 +1,11 @@
 .recipe {
-    max-width: 407px;
-    max-height: 473px;
+    max-width: 400px;
+    max-height: 400px;
     border-radius: 33px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     position: relative;
     overflow: hidden;
-    margin-bottom: 40px;
+    margin: 30px;
 
     .picture {
         width: 100%;
@@ -81,7 +81,7 @@
 
     @keyframes shaking {
         0%   {transform: rotate(0deg)}
-        25%   {transform: rotate(30deg)}
+        25%  {transform: rotate(30deg)}
         75%  {transform: rotate(-30deg)}
         100% {transform: rotate(0deg)}
     }
