--- a/src/components/recipe/Recipe.module.scss
+++ b/src/components/recipe/Recipe.module.scss
@@ -59,7 +59,7 @@
         cursor: pointer;
     }
 
-    .buttons{
+    .buttonIcons{
         position: absolute;
         top: 10px;
         right: 8px;
