--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -2,13 +2,15 @@
     position: relative;
     min-width: 258px;
     height: auto;
-    bottom: 15px;
-    margin: 0 auto;
-    padding: 0 15px;
     z-index: 1;
-    left: -26px;
-    margin-top: 20px;
-    display: flex;
+
+    .searchInput{
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        bottom: 11px;
+        left: 12px;
+    }
 
     .searchAttribute {
         color: #fff;
@@ -38,16 +40,16 @@
         border-radius: 33px;
         background-color: transparent;
         border: 2px solid #fe4f1e;
-        color: #fff;
-        padding: 0 15px;
+        padding: 0 34px;
+        position: relative;
     }
 
     .input:focus {
         outline: none;
     }
     .input::placeholder {
-        color: #ffffff;
-        padding: 0 15px;
+        color: inherit;
+        // padding: 0 20px;
     }
 }
 
