--- a/src/components/recipe/Recipe.module.scss
+++ b/src/components/recipe/Recipe.module.scss
@@ -68,21 +68,25 @@
 
    
 
-    .heart,
-    .trash{
+    .heart{
         border: none;
         background-color: transparent;
         margin-left: 10px;
         cursor: pointer;
-        :hover{
+        .iconHeart{
+            width: 40px;
+            height: 40px
+        }
+        .iconHeart:hover{
             animation: shaking 1s;
         }
     }
 
     @keyframes shaking {
-        0%   {transform: rotate(0deg)}
-        25%  {transform: rotate(30deg)}
-        75%  {transform: rotate(-30deg)}
-        100% {transform: rotate(0deg)}
+        0%   {width: 40px; height: 40px}
+        25%  {width: 44px; height: 44px}
+        50%  {width: 40px; height: 40px}
+        75%  {width: 44px; height: 44px}
+        100% {width: 40px; height: 40px}
     }
 }
