--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,9 +2,9 @@
     box-sizing: border-box;
 }
 
-// .body{
-//     font-family: 'Inter';
-// }
+body{
+    font-family: sans-serif;
+}
 
 .container{
     max-width: 1440px;
