--- a/src/components/recipe/Recipe.module.scss
+++ b/src/components/recipe/Recipe.module.scss
@@ -1,6 +1,6 @@
 .recipe {
     max-width: 400px;
-    max-height: 400px;
+    height: auto;
     border-radius: 33px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     position: relative;
@@ -9,7 +9,7 @@
 
     .picture {
         width: 100%;
-        height: auto;
+        height: 100%;
         object-fit: cover;
         border-radius: 33px;
         z-index: 3;
@@ -59,34 +59,76 @@
         cursor: pointer;
     }
 
-    .buttonIcons{
+    .buttonIcons {
         position: absolute;
         top: 10px;
         right: 8px;
         transition: all 1.3s;
     }
 
-   
-
-    .heart{
+    .heart {
         border: none;
         background-color: transparent;
         margin-left: 10px;
         cursor: pointer;
-        .iconHeart{
+        .iconHeart {
             width: 40px;
-            height: 40px
+            height: 40px;
         }
-        .iconHeart:hover{
+        .iconHeart:hover {
             animation: shaking 1s;
         }
     }
 
+    .skelet {
+        max-width: 400px;
+        max-height: 400px;
+        background-color: #c4c4c4;
+    }
+
+    .skeletContent {
+        width: 400px;
+        height: 400px;
+    }
+
     @keyframes shaking {
-        0%   {width: 40px; height: 40px}
-        25%  {width: 44px; height: 44px}
-        50%  {width: 40px; height: 40px}
-        75%  {width: 44px; height: 44px}
-        100% {width: 40px; height: 40px}
+        0% {
+            width: 40px;
+            height: 40px;
+        }
+        25% {
+            width: 44px;
+            height: 44px;
+        }
+        50% {
+            width: 40px;
+            height: 40px;
+        }
+        75% {
+            width: 44px;
+            height: 44px;
+        }
+        100% {
+            width: 40px;
+            height: 40px;
+        }
+    }
+}
+
+@media (max-width: 1420px) {
+    .recipe {
+        max-width: 320px;
+    }
+}
+
+@media (max-width: 1180px) {
+    .recipe {
+        max-width: 360px;
+    }
+}
+
+@media (max-width: 880px) {
+    .recipe {
+        max-width: 600px;
     }
 }
