--- a/src/components/pagination/Pagination.module.scss
+++ b/src/components/pagination/Pagination.module.scss
@@ -29,3 +29,23 @@
        }
     }
 }
+
+@media(max-width: 480px) {
+    .root{
+        a{
+            width: 36px;
+            height: 36px;
+            line-height: 34px;
+        }
+    }
+}
+
+@media(max-width:380px) {
+    .root{
+        a{
+            width: 24px;
+            height: 24px;
+            line-height: 22px;
+        }
+    }
+}
