--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -1,8 +1,9 @@
 .search {
     position: relative;
-    min-width: 258px;
+    max-width: 258px;
     height: auto;
     z-index: 1;
+    margin: 0 auto; 
 
     .searchInput{
         width: 20px;
