--- a/src/components/customButton/CustomButton.module.scss
+++ b/src/components/customButton/CustomButton.module.scss
@@ -1,4 +1,4 @@
-.btn {
+.mainClassName {
     border-radius: 32px;
     width: 200px;
     height: 40px;
@@ -12,21 +12,5 @@
         transition: all 0.3s;
         color: #fff;
         background-color: #fe4f1e;
-    }
-}
-
-@media (max-width: 380px) {
-    .btn{
-        width: 160px;
-        height: 30px;
-        font-size: 14px;
-    }
-}
-
-@media (max-width: 340px) {
-    .btn{
-        width: 140px;
-        height: 20px;
-        font-size: 12px;
     }
 }
