--- a/src/components/recipe/Recipe.module.scss
+++ b/src/components/recipe/Recipe.module.scss
@@ -5,7 +5,8 @@
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     position: relative;
     overflow: hidden;
-    margin: 30px;
+    margin-bottom: 30px;
+    overflow: hidden;
     &:hover {
         .content {
             position: absolute;
@@ -18,17 +19,44 @@
             opacity: 1;
             transition: all 0.3s;
         }
+        .category {
+            right: 0;
+            transition: all .3s;
+        }
     }
 }
 
-.title{
+.category {
+    width: 120px;
+    height: 40px;
+    border-bottom: 1px solid #fe4f1e;
+    border-left: 1px solid #fe4f1e;
+    border-top: 1px solid #fe4f1e;
+    border-radius: 33px 0 0 33px;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.7);
+    top: 30px;
+    right: -100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .3s;
+}
+
+.categoryText {
+    font-size: 18px;
+    line-height: 16px;
+    color: #000;
+}
+
+.title {
     font-size: 18px;
     margin-top: 10px;
     padding: 0;
     margin: 6px 0 6px 0;
 }
 
-.text{
+.text {
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -41,7 +69,6 @@
     border-radius: 33px;
     z-index: 3;
 }
-
 
 .content {
     position: absolute;
@@ -60,7 +87,7 @@
     left: 30px;
     top: 0;
 }
-.look{
+.look {
     width: 100%;
     position: absolute;
     text-align: center;
@@ -124,48 +151,108 @@
 
 @media (max-width: 1420px) {
     .recipe {
-        max-width: 320px;
+        max-width: 32%;
     }
 }
 
-@media (max-width: 1180px) {
-    .recipe {
-        max-width: 360px;
+@media (max-width: 820px) {
+    .content {
+        .btn {
+            width: 160px;
+            height: 30px;
+            font-size: 14px;
+        }
+    }
+
+    .title {
+        font-size: 16px;
+    }
+
+    .text {
+        font-size: 12px;
+    }
+
+    .iconHeart {
+        width: 30px;
+        height: 30px;
     }
 }
 
-@media (max-width: 880px) {
-    .title{
-        font-size: 38px;
-    }
-    
+@media (max-width: 680px) {
     .recipe {
-        max-width: 600px;
+        max-width: 48%;
     }
-    .iconHeart{
-        width: 50px;
-        height: 50px;
+
+    .content {
+        .btn {
+            width: 220px;
+            height: 40px;
+            font-size: 18px;
+        }
+    }
+}
+
+@media (max-width: 580px) {
+    .content {
+        .btn {
+            width: 160px;
+            height: 30px;
+            font-size: 14px;
+        }
     }
 }
 
 @media (max-width: 440px) {
-    .title{
+    .title {
         font-size: 24px;
     }
-    .text{
+    .text {
         font-size: 12px;
-    }  
+    }
+}
+
+@media (max-width: 480px) {
+    .title {
+        font-size: 28px;
+    }
+    .text {
+        font-size: 14px;
+    }
+    .recipe {
+        max-width: 100%;
+    }
+
+    .iconHeart {
+        width: 40px;
+        height: 40px;
+    }
+
+    .content {
+        .btn {
+            width: 220px;
+            height: 40px;
+            font-size: 18px;
+        }
+    }
 }
 
 @media (max-width: 380px) {
-    .title{
+    .title {
         font-size: 18px;
     }
-    .text{
+    .text {
         font-size: 12px;
-    }  
-    .iconHeart{
+    }
+    .iconHeart {
         width: 30px;
         height: 30px;
+    }
+
+    .content {
+        .btn {
+            width: 180px;
+            height: 30px;
+            font-size: 16px;
+        }
     }
 }
