--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -1,6 +1,6 @@
-.search {
+.mainSearch {
     position: relative;
-    max-width: 258px;
+    width: 100%;
     height: auto;
     z-index: 1;
     margin: 0 auto; 
