--- a/src/pages/favorite/Favorite.module.scss
+++ b/src/pages/favorite/Favorite.module.scss
@@ -1,16 +1,20 @@
-.search{
+.search {
     width: 260px;
     margin: 50px 0;
 }
 
-.content{
+.content {
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 50px;
 }
 
-.item{
+
+
+.item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,41 +22,139 @@
     border: 1px solid #fe4f1e;
     border-radius: 33px;
     padding: 10px;
+    max-width: 600px;
+    position: relative;
+    height: auto;
 }
 
-.picture{
-    width: 260px;
-    height: 260px;
+.description {
+    position: absolute;
+    left: 290px;
+    top: 10px;
+}
+
+.name {
+    font-weight: bold;
+    font-size: 28px;
+    margin: 0 0 10px 0;
+}
+.descriptionText {
+    display: flex;
+}
+
+.text {
+    font-size: 20px;
+    font-weight: 100;
+    margin: 0 12px 0 0;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 300px;
+    height: 120px;
+    margin-top: 50px;
+}
+
+.pictureWrap {
+    max-width: 260px;
+    height: auto;
+    margin-right: 16px;
+    position: relative;
+}
+
+.category {
+    width: 120px;
+    height: 40px;
+    border-bottom: 1px solid #fe4f1e;
+    border-left: 1px solid #fe4f1e;
+    border-top: 1px solid #fe4f1e;
+    border-radius: 33px 0 0 33px;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.7);
+    top: 40px;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .3s;
+}
+
+.categoryText {
+    font-size: 18px;
+    line-height: 16px;
+    color: #000;
+}
+
+.picture {
+    width: 100%;
+    height: 100%;
     border-radius: 33px;
 }
 
-.textContent{
-    display: flex;
-    flex-direction: column;
+@media (max-width: 1240px) {
+    .item{
+        max-width: inherit;
+        width: 100%;
+    }
 }
 
-.buttons{
-    display: flex;
-    width: 540px;
-    height: auto;
-    justify-content: space-between;
-    
+@media (max-width: 580px) {
+    .pictureWrap {
+        max-width: 100%;
+        margin-right: 0;
+    }
+    .item {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+    }
+    .buttons {
+        margin-top: 0;
+        align-items: center;
+    }
+    .description {
+        width: 100%;
+        position: initial;
+        margin: 10px 0;
+        text-align: left;
+    }
+    .name{
+        font-size: 32px;
+    }
+
+    .text{
+        font-size: 18px;
+    }
+
+    .buttons{
+        width: 100%;
+    }
+
+    .lookLink{
+        width: 100%;
+        text-align: center;
+    }
+
+    .dopStyle{
+        width: 100%;
+    }
 }
 
-.name{
-    font-weight: bold;
-    font-size: 32px;
+@media (max-width: 420px){
+    .search{
+        width: 100%;
+        margin: 20px 0;
+    }
 }
 
-.text{
-    font-size: 22px;
-    font-weight: light;
-}
+@media (max-width: 320px) {
+    .name{
+        font-size: 26px;
+    }
 
-.mainInfo{
-    width: 540px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 20px;
+    .text{
+        font-size: 16px;
+    }
 }
