--- a/src/components/burgerMenu/BurgerMenu.module.scss
+++ b/src/components/burgerMenu/BurgerMenu.module.scss
@@ -45,7 +45,7 @@
             bottom: 0;
             width: 30px;
             height: 3.8px;
-            background-color: #fe4f1e;
+            background-color: #fff;
             border-radius: 8px;
             transition: all 0.3s;
         }
@@ -66,7 +66,7 @@
             bottom: 0;
             width: 30px;
             height: 3.8px;
-            background-color: #fe4f1e;
+            background-color: #fff;
             border-radius: 8px;
             transition: all 0.3s;
         }
