--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,12 +1,11 @@
-.bg {
-    width: 100%;
-    height: 30px;
-    background-color: #fe4f1e;
-}
-
 .header {
     width: 100%;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    background-color: #fe4f1e;
     height: auto;
+    z-index: 10;
 }
 
 .headerContetn {
@@ -31,7 +30,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 11px 0;
 }
 
 .menu {
@@ -44,29 +42,22 @@
     justify-content: space-between;
 }
 
-.item {
-    width: auto;
-}
-
 .link {
     text-transform: capitalize;
     font-weight: 400;
     font-size: 26px;
     text-align: center;
     font-family: Inkfree;
-    color: #000;
+    color: #fff;
     transition: all 0.3s;
     &:hover {
-        color: #fe4f1e;
+        color: #f5fc70;
         transition: all 0.3s;
-    }
-    span {
-        color: #fe4f1e;
     }
 }
 
 .link.active {
-    color: #fe4f1e;
+    color: #f5fc70;
 }
 
 .mobMenu {
@@ -74,12 +65,19 @@
 }
 
 @media (max-width: 720px) {
+    .header{
+        top: 0;
+        position: fixed;
+    }
     .logo {
         display: none;
     }
     .mobileLogo {
-        z-index: 1;
         display: block;
+        position: static;
+    }
+    .mainLogo{
+        z-index: 10;
     }
     .menu {
         display: none;
