--- a/src/components/mobileMenu/MobileMenu.module.scss
+++ b/src/components/mobileMenu/MobileMenu.module.scss
@@ -1,4 +1,4 @@
-.mainClasName{
+.mainClasName {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -6,25 +6,25 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: -10;
     overflow: hidden;
 }
 
-.menu{
+.menu {
     background-color: rgba(0, 0, 0, 0.5);
     top: 0;
     left: 100%;
     right: 0;
     bottom: 0;
     position: absolute;
-    transition: all .3s;
+    transition: all 0.3s;
 }
 
-.menu.active{
-    left: 50%;   
+.menu.active {
+    left: 0%;
 }
 
-.list{
+.list {
     width: 100%;
     height: 100%;
     display: flex;
@@ -33,10 +33,10 @@
     position: relative;
     text-align: right;
     padding-right: 20px;
-    top: -100px;
+    bottom: 5%;;
 }
 
-.item{
+.item {
     font-size: 18px;
     color: #fff;
     margin-bottom: 50px;
