--- a/src/components/billboard/Billboard.module.scss
+++ b/src/components/billboard/Billboard.module.scss
@@ -1,21 +1,20 @@
-
-.bg {
-    width: 100%;
-    height: 362px;
-    position: absolute;
-    opacity: 0.7;
-    background-color: #000;
-    z-index: 3;
-}
-
-.swiper{
+.billboard{
     width: 100%;
     height: 362px;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("../../assets//jpg/billboard.jpg");
+    background-image: url("../../assets//jpg/billboardMin.jpg");
     text-align: center;
+    &::after{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        top: 0;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
 }
 
 .excerpt{
