added optimization and some fixes

--- a/src/pages/about/About.module.scss
+++ b/src/pages/about/About.module.scss
@@ -86,18 +86,23 @@
         order: -1;
         z-index: -1;
     }
+    .title {
+        margin-top: 60px;
+    }
 }
 
 @media (max-width: 460px) {
     .title {
         font-size: 22px;
-        margin: 0;
-        margin-bottom: 30px;
     }
     .link {
         display: table-row;
         color: revert;
         font-size: 12px;
         line-height: 16px;
+    }
+    .myMail {
+        font-size: 12px;
+        line-height: 16px;   
     }
 }
