--- a/src/components/recipe/Recipe.module.scss
+++ b/src/components/recipe/Recipe.module.scss
@@ -1,5 +1,4 @@
 .recipe {
-    max-width: 400px;
     height: auto;
     border-radius: 33px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
@@ -96,9 +95,10 @@
 
 .buttonIcon {
     position: absolute;
-    top: 10px;
+    top: 44px;
     right: 10px;
     transition: all 1.3s;
+    z-index: 1;
 }
 
 .heart {
@@ -149,12 +149,6 @@
     }
 }
 
-@media (max-width: 1420px) {
-    .recipe {
-        max-width: 32%;
-    }
-}
-
 @media (max-width: 820px) {
     .content {
         .btn {
@@ -178,27 +172,26 @@
     }
 }
 
-@media (max-width: 680px) {
-    .recipe {
-        max-width: 48%;
-    }
-
+@media (max-width: 520px) {
     .content {
         .btn {
-            width: 220px;
-            height: 40px;
-            font-size: 18px;
+            width: 180px;
+            height: 36px;
+            font-size: 16px;
         }
     }
-}
 
-@media (max-width: 580px) {
-    .content {
-        .btn {
-            width: 160px;
-            height: 30px;
-            font-size: 14px;
-        }
+    .title {
+        font-size: 32px;
+    }
+
+    .text {
+        font-size: 20px;
+    }
+
+    .iconHeart {
+        width: 40px;
+        height: 40px;
     }
 }
 
